update feature working and display an string instead of an array if empty

--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -79,3 +79,8 @@ table {
 // AUCTIONS
 
 // WON AUCTIONS
+.empty-table {
+  font-size: 1.2rem;
+  text-align: center;
+  color: v.$color-secondary;
+}
