--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -84,3 +84,54 @@ table {
   text-align: center;
   color: v.$color-secondary;
 }
+
+.modal-delete {
+  &.is-active {
+    z-index: 2;
+    position: fixed;
+    top: 30%;
+    left: 0;
+    transform: translate(calc(50vw - 50%), -30%);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #ffffff;
+    max-width: 28rem;
+    height: 300px;
+    padding: 3.375rem;
+    border-radius: 5px;
+  }
+
+  .user-delete-title {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .user-delete-action {
+    margin-bottom: 2rem;
+  }
+
+  .modal-footer {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+
+    button {
+      border: none;
+      width: 50%;
+      padding: 1rem;
+      justify-content: center;
+      border-radius: 5px;
+      color: v.$color-text;
+      cursor: pointer;
+    }
+
+    .modal-confirm-btn {
+      background-color: red;
+    }
+
+    .modal-cancel-btn {
+      color: black;
+    }
+  }
+}
