--- a/src/components/SingleArticle/SingleArticle.scss
+++ b/src/components/SingleArticle/SingleArticle.scss
@@ -180,7 +180,7 @@ h2 {
   }
 
   .error-message {
-    display: flex;
+    text-align: center;
     padding-bottom: 1rem;
     color: #d40000;
   }
