--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -12,6 +12,9 @@
   margin-bottom: 10;
   font-weight: bolder;
   // border-bottom: solid 1px black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   input {
     margin: 20px;
   }
