--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -81,6 +81,11 @@ table {
       padding: 10px;
       border-radius: 5px;
       width: fit-content;
+      cursor: pointer;
+    }
+
+    button:hover {
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
   }
 }
