--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -1,75 +1,79 @@
-@use "../../styles/variables" as v;
+@use '../../styles/variables' as v;
 
 .cards {
-    margin-bottom: 2.5rem;
+  margin-bottom: 2.5rem;
 
-    &-root {
-        display: flex;
-        gap: 15px;
-    }
+  &-root {
+    display: flex;
+    gap: 15px;
+  }
+}
 
-    .cards-container {
-        border-radius: 5px;
-        background-color: v.$color-on-lake;
-        box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
-        transition: background-color 0.3s;
+.cards-container {
+  border-radius: 5px;
+  background-color: v.$color-on-lake;
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: background-color 0.3s;
 
-        &:hover {
-            background-color: rgba(12, 126, 180, 0.10); 
-        }
-    }
+  &:hover {
+    background-color: rgba(12, 126, 180, 0.1);
+  }
+}
 
-    .card-img {
-        position: relative;
-        height: 25rem;
-        overflow: hidden;
+.card-img {
+  height: 200px;
+  position: relative;
+  overflow: hidden;
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-        span {
-            font-family: "Open Sans";
-            font-size: 0.7rem;
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background-color: #6DA4AA;
-            color: #ffff;
-            padding: 4px;
-            border-radius: 5px;
-        }
+  span {
+    font-family: 'Open Sans';
+    font-size: 0.7rem;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #6da4aa;
+    color: #ffff;
+    padding: 4px;
+    border-radius: 5px;
+  }
 
-        img {
-            height: auto;
-        }
-    }
+  img {
+    height: auto;
+  }
+}
 
-    .card-legend {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 20px;
+.card-legend {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: nowrap;
+  gap: 20px;
+  margin-bottom: 20px;
 
-        p {
-            text-align: center;
-            font-size: 1.5rem;
-        }
+  p {
+    text-align: center;
+    font-size: 1.5rem;
+    overflow-y: hidden;
+    white-space: nowrap;
+  }
 
-        &__data {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            padding: 0 50px;
-        }
+  &__data {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 5%;
+  }
 
-        &__tokens {
-            color: v.$color-primary;
-        }
+  &__tokens {
+    color: v.$color-primary;
+  }
 
-        &__times {
-            font-family: "Open Sans";
-        }
-    }
+  &__times {
+    font-family: 'Open Sans';
+  }
 }
