--- a/src/components/AppHeader/AppHeader.scss
+++ b/src/components/AppHeader/AppHeader.scss
@@ -187,8 +187,68 @@
   }
 }
 
+.container-searchbar {
+  border: 1px solid red;
+  position: relative;
+
+  flex: 2;
+
+  display: flex;
+  flex-direction: column;
+  @media (max-width: 900px) {
+    justify-content: start;
+    background-color: white;
+
+    button {
+      display: none;
+    }
+
+    input {
+      display: none;
+    }
+  }
+
+  @media (max-width: 650px) {
+    display: none;
+  }
+}
+
+.resultSearch {
+  //border: 1px solid yellow;
+  position: relative;
+  z-index: 2;
+
+  .arraySearch {
+    //border: 2px solid purple;
+    position: absolute;
+    padding: 0;
+    width: 100%;
+    box-shadow: 1px 1px 3px #bdc5c8, -1px 1px 3px #bdc5c8;
+    background-color: white;
+    border-radius: 5px;
+    list-style: none;
+  }
+
+  .list-inside {
+    //border: 1px solid green;
+    margin: 0;
+
+    a {
+      display: block;
+      padding: 10px 30px;
+
+      &:hover {
+        background-color: #efefef;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
 // Searchbar inside & outside.
 .searchbar {
+  position: absolute;
+  border: 2px solid green;
   flex: 2;
 
   display: flex;
@@ -205,36 +265,11 @@
   }
 
   input {
+    position: absolute;
     outline: none;
     border: none;
     background-color: inherit;
     width: 100%;
-  }
-
-  &.container-inside {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    @media (max-width: 900px) {
-      justify-content: start;
-      background-color: white;
-
-      button {
-        display: none;
-      }
-
-      input {
-        display: none;
-      }
-    }
-    .list-inside {
-      list-style: none;
-      background-color: #88b4ba;
-    }
-
-    @media (max-width: 650px) {
-      display: none;
-    }
   }
 
   &.outside-navbar {
