--- a/src/components/AppHeader/AppHeader.scss
+++ b/src/components/AppHeader/AppHeader.scss
@@ -187,72 +187,12 @@
   }
 }
 
+// Searchbar
 .container-searchbar {
-  border: 1px solid red;
-  position: relative;
-
   flex: 2;
 
   display: flex;
   flex-direction: column;
-  @media (max-width: 900px) {
-    justify-content: start;
-    background-color: white;
-
-    button {
-      display: none;
-    }
-
-    input {
-      display: none;
-    }
-  }
-
-  @media (max-width: 650px) {
-    display: none;
-  }
-}
-
-.resultSearch {
-  //border: 1px solid yellow;
-  position: relative;
-  z-index: 2;
-
-  .arraySearch {
-    //border: 2px solid purple;
-    position: absolute;
-    padding: 0;
-    width: 100%;
-    box-shadow: 1px 1px 3px #bdc5c8, -1px 1px 3px #bdc5c8;
-    background-color: white;
-    border-radius: 5px;
-    list-style: none;
-  }
-
-  .list-inside {
-    //border: 1px solid green;
-    margin: 0;
-
-    a {
-      display: block;
-      padding: 10px 30px;
-
-      &:hover {
-        background-color: #efefef;
-        cursor: pointer;
-      }
-    }
-  }
-}
-
-// Searchbar inside & outside.
-.searchbar {
-  position: absolute;
-  border: 2px solid green;
-  flex: 2;
-
-  display: flex;
-  justify-content: center;
 
   padding: 8px;
   background-color: v.$color-searchbar;
@@ -277,6 +217,37 @@
 
     @media (min-width: 901px) {
       display: none;
+    }
+  }
+}
+
+// Search suggestions
+.resultSearch {
+  position: relative;
+  z-index: 2;
+
+  .arraySearch {
+    margin-top: 12px;
+    position: absolute;
+    padding: 0;
+    width: 100%;
+    box-shadow: 1px 1px 3px #bdc5c8, -1px 1px 3px #bdc5c8;
+    background-color: white;
+    border-radius: 5px;
+    list-style: none;
+  }
+
+  .list-inside {
+    margin: 0;
+
+    a {
+      display: block;
+      padding: 10px 30px;
+
+      &:hover {
+        background-color: #efefef;
+        cursor: pointer;
+      }
     }
   }
 }
