--- a/src/components/AddArticle/AddArticle.scss
+++ b/src/components/AddArticle/AddArticle.scss
@@ -1,6 +1,7 @@
 @use '../../styles/variables' as v;
 
 h2 {
+  margin-top: 2rem;
   font-size: 2.5rem;
   @media screen and (max-width: v.$layout-breakpoint-desktop) {
     font-size: 1.5rem; // remplacer par les variables une fois merge
@@ -27,7 +28,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.5rem;
-    @media screen and (max-width: v.$layout-breakpoint-tablet) {
+    @media screen and (max-width: 830px) {
       flex-direction: column;
       width: 100%;
     }
@@ -37,7 +38,7 @@ h2 {
       width: 300px;
       outline: none;
       padding: 5px;
-      @media screen and (max-width: v.$layout-breakpoint-tablet) {
+      @media screen and (max-width: 830px) {
         width: 100%;
         margin-top: 0.5rem;
       }
