--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -165,17 +165,71 @@ table {
     text-align: center;
     background-color: #ffffff;
     max-width: 28rem;
-    height: 300px;
+    height: 350px;
     padding: 3.375rem;
     border-radius: 5px;
   }
 
-  .user-delete-title {
+  .delete-title {
     font-size: 1.5rem;
     margin-bottom: 2rem;
   }
 
-  .user-delete-action,
+  .delete-action,
+  .error-message {
+    font-size: 1.2rem;
+    color: rgb(219, 0, 0);
+  }
+
+  .modal-footer {
+    margin: 3rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+
+    button {
+      border: none;
+      width: 50%;
+      padding: 1rem;
+      justify-content: center;
+      border-radius: 5px;
+      color: v.$color-text;
+      cursor: pointer;
+    }
+
+    .modal-confirm-btn {
+      background-color: red;
+    }
+
+    .modal-cancel-btn {
+      color: black;
+    }
+  }
+}
+
+.modal-delete-article {
+  &.is-active {
+    z-index: 2;
+    position: fixed;
+    top: 30%;
+    left: 0;
+    transform: translate(calc(50vw - 50%), -30%);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #ffffff;
+    max-width: 28rem;
+    height: 350px;
+    padding: 3.375rem;
+    border-radius: 5px;
+  }
+
+  .article-delete-title {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .article-delete-action,
   .error-message {
     font-size: 1.2rem;
     color: rgb(219, 0, 0);
