adding success or error message to add aarticle

--- a/src/components/AddArticle/AddArticle.scss
+++ b/src/components/AddArticle/AddArticle.scss
@@ -63,3 +63,15 @@ h2 {
     }
   }
 }
+
+.success-msg {
+  text-align: center;
+  font-size: 1.5rem;
+  color: v.$color-secondary;
+}
+
+.error-msg {
+  text-align: center;
+  font-size: 1.5rem;
+  color: red;
+}
