--- a/src/components/AppHeader/AppHeader.scss
+++ b/src/components/AppHeader/AppHeader.scss
@@ -282,7 +282,7 @@
 
 // sidebar menu
 .aside-menu {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -310,5 +310,47 @@
 
   a {
     color: white;
+  }
+
+  // profile sidebar
+  .profile {
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+    }
+
+    h3 {
+      text-align: center;
+      margin: 10px auto 5px;
+      color: white;
+    }
+  }
+
+  // sidebar menu items
+  .menu-items {
+    li a {
+      display: block;
+      padding: 13px 30px;
+      border-bottom: 1px solid #10558d;
+
+      &:hover {
+        color: #10558d;
+        background-color: white;
+        border-left: 3px solid v.$color-lake;
+
+        svg {
+          color: #10558d;
+        }
+
+      }
+    }
+
+    // icon
+    svg {
+      display: inline-block;
+      color: white;
+      width: 30px;
+    }
   }
 }
