--- a/src/components/AddArticle/AddArticle.scss
+++ b/src/components/AddArticle/AddArticle.scss
@@ -1,8 +1,9 @@
 @use '../../styles/variables' as v;
 
-h2 {
+.sell-article {
   margin-top: 2rem;
   font-size: 2.5rem;
+  text-align: center;
   @media screen and (max-width: v.$layout-breakpoint-desktop) {
     font-size: 1.5rem; // remplacer par les variables une fois merge
   }
