--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -4,6 +4,12 @@ section {
   margin-bottom: 2.5rem;
 }
 
+.user-title,
+.section-title {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
 table {
   text-align: center;
   width: 100%;
