--- a/src/components/SingleArticle/SingleArticle.scss
+++ b/src/components/SingleArticle/SingleArticle.scss
@@ -1,7 +1,9 @@
 @use '../../styles/variables' as v;
 
-h2 {
-  font-size: 2rem;
+.single-product-title,
+.auction-history-title,
+.auction-confirm-title {
+  font-size: 2.5rem;
   text-align: center;
 
   @media screen and (max-width: v.$layout-breakpoint-desktop) {
