--- a/src/components/Articles/Articles.scss
+++ b/src/components/Articles/Articles.scss
@@ -5,10 +5,15 @@
   padding: 20px;
   margin: 20px;
   border-radius: 25px;
+  @media screen and (max-width: 712px) {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 .Category_Choice {
   font-size: bolder;
 }
+
 .Sort,
 .Category_Choice {
   color: rgb(222, 190, 75);
@@ -17,6 +22,17 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  @media screen and (max-width: 712px) {
+    flex-direction: column;
+  }
+  .sort-by-duration,
+  .sort-by-price {
+    @media screen and (max-width: 712px) {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
   input {
     margin: 20px;
   }
@@ -78,6 +94,9 @@
   display: flex;
   justify-content: space-around;
   margin: 50px;
+  @media screen and (max-width: 712px) {
+    gap: 10px;
+  }
 }
 
 .buttonPage {
