--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $color-lake: #6da4aa;
 $color-on-lake: #F1F6F7;
 
 $color-error: #b23542;
+$color-success: #84b59f;
 
 $tablet-font-size-text: 0.8rem;
 $mobile-font-size-text: 0.5rem;
