--- a/src/components/SingleArticle/SingleArticle.scss
+++ b/src/components/SingleArticle/SingleArticle.scss
@@ -89,10 +89,13 @@
     @media screen and (max-width: v.$layout-breakpoint-desktop) {
       font-size: v.$tablet-font-size-major;
       border: 1.5px dotted v.$color-secondary;
+      width: 50%;
+      margin: 0 auto;
     }
     @media screen and (max-width: v.$layout-breakpoint-tablet) {
       font-size: v.$mobile-font-size-major;
       border: 0.75px dotted v.$color-secondary;
+      width: 70%;
     }
   }
 
