--- a/src/components/AppHeader/PopupBox.scss
+++ b/src/components/AppHeader/PopupBox.scss
@@ -11,6 +11,7 @@
   border: 3px solid black;
   background-color: white;
   border-radius: 5px;
+  z-index: 1;
 
   &-popup:before {
     content: "";
