--- a/src/components/AddArticle/AddArticle.scss
+++ b/src/components/AddArticle/AddArticle.scss
@@ -2,27 +2,22 @@
 
 .sell-article {
   margin-top: 2rem;
-  font-size: 2.5rem;
+  font-size: v.$mobile-font-size-header-s;
   text-align: center;
-  @media screen and (max-width: v.$layout-breakpoint-desktop) {
-    font-size: 1.5rem; // remplacer par les variables une fois merge
-  }
-  @media screen and (max-width: v.$layout-breakpoint-tablet) {
-    font-size: 1rem; // remplacer par les variables une fois merge
-  }
 }
 
 .add-article-form {
-  margin: 2rem auto;
-  width: 50%;
   text-align: left;
-  @media screen and (max-width: v.$layout-breakpoint-desktop) {
-    width: 60%;
-    font-size: 0.8rem; // remplacer par les variables une fois merge
+  //width: 50%;
+  margin: 2rem auto;
+
+  @media screen and (min-width: v.$layout-breakpoint-tablet) {
+    width: 50%;
+    font-size: v.$tablet-font-size-paragraphe-body-L; 
   }
-  @media screen and (max-width: v.$layout-breakpoint-tablet) {
-    width: 100%;
-    font-size: 0.5rem; // remplacer par les variables une fois merge
+
+  @media screen and (min-width: v.$layout-breakpoint-desktop) {
+    width: 60%;
   }
 
   div {
