--- a/src/components/CategoriesBar/CategoriesBar.scss
+++ b/src/components/CategoriesBar/CategoriesBar.scss
@@ -1,4 +1,4 @@
-@use "../../styles/variables" as v;
+@use '../../styles/variables' as v;
 
 .categories-navbar {
   display: flex;
@@ -19,15 +19,18 @@
   justify-content: center;
   align-items: center;
   padding: 5px 0;
-@media screen and (max-width: v.$layout-breakpoint-desktop) {
-  font-size: v.$tablet-font-size-text;
-  min-width: fit-content;
-  width: 100px;
-  padding: 5px 10px;
-}
+
+  @media screen and (max-width: v.$layout-breakpoint-desktop) {
+    //font-size: v.$tablet-font-size-text;
+    font-size: v.$tablet-font-size-paragraphe-body-L;
+    min-width: fit-content;
+    width: 100px;
+    padding: 5px 10px;
+  }
 
   @media screen and (max-width: v.$layout-breakpoint-tablet) {
-    font-size: v.$mobile-font-size-text;
+    //font-size: v.$mobile-font-size-text;
+    font-size: v.$mobile-font-size-paragraphe-body-L;
     width: 75px;
   }
 }
@@ -35,5 +38,5 @@
 .categories-link:hover {
   background-color: #e1aa70;
   color: v.$color-text;
-  border: none;
+  //border: none;
 }
