--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,18 @@ $color-on-lake: #F1F6F7;
 $color-error: #b23542;
 $color-success: #84b59f;
 
+// Mobile font-size
+$mobile-font-size-paragraphe-body-L: 1rem; // 16px
+$mobile-font-size-header-s: 1.5rem; //24px
+
+// Tablet font-size
+$tablet-font-size-paragraphe-body-L: 1rem; // 16px
+$tablet-font-size-header-s: 1.5rem; //24px
+
+// Desktop font-size
+$desktop-font-size-paragraphe-body-L: 1rem; // 16px
+$desktop-font-size-header-s: 1.5rem; // 24px
+
 $tablet-font-size-text: 0.8rem;
 $mobile-font-size-text: 0.5rem;
 
