add_feature_previous-page_next-page_rename_sort_class&sortName

--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -16,7 +16,7 @@
   font-weight: bolder;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   input {
     margin: 20px;
   }
