Style carousel + stackarticles

--- a/src/components/StackArticles/StackArticles.scss
+++ b/src/components/StackArticles/StackArticles.scss
@@ -1,5 +1,9 @@
 @use "../../styles/variables" as v;
 
+.header-stackArticles {
+  margin-bottom: 22px;
+}
+
 .stackArticles {
   .cards-container:nth-child(1) {
     flex: 2;
