--- a/src/components/Articles/Articles.scss
+++ b/src/components/Articles/Articles.scss
@@ -21,7 +21,18 @@
   font-weight: bolder;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  @media screen and (max-width: 712px) {
+    flex-direction: column;
+  }
+  .sort-by-duration,
+  .sort-by-price {
+    @media screen and (max-width: 712px) {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
   input {
     margin: 20px;
   }
