--- a/src/components/Articles/Articles.scss
+++ b/src/components/Articles/Articles.scss
@@ -62,7 +62,8 @@
     padding: 10px;
     background-color: white;
     border-radius: 8%;
-    overflow: hidden;
+    object-fit: cover;
+
   }
   p,
   .nameItem {
