--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -8,7 +8,9 @@
     gap: 15px;
   }
 }
-
+.card-img {
+  border-radius: 25px;
+}
 .cards-container {
   background-color: v.$color-on-lake;
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
@@ -16,17 +18,18 @@
   padding: 5px;
   border-radius: 5%;
   padding: 5px;
+  overflow:hidden;
   img {
-    width: 15rem;
-    margin: 10px auto;
-    padding: 10px;
+    height: 100%;
+    width: 100%;
+    padding: 4px;
     background-color: white;
-    border-radius: 8%;
-    // overflow: hidden;
+    border-radius: 15px;
+    object-fit: cover;
   }
-  p{
+  p {
     text-align: center;
-    font-size: 0.7rem;
+    font-size: 0.7em;
     margin: 10px;
     font-weight: 800;
     color: rgb(122, 119, 119);
@@ -54,10 +57,6 @@
     color: #ffff;
     padding: 4px;
     border-radius: 5px;
-  }
-
-  img {
-    height: auto;
   }
 }
 
