--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -2,14 +2,17 @@
 
 .cards {
   margin-bottom: 2.5rem;
+  height: 100%;
 
   &-root {
     display: flex;
+    height: 100%;
     gap: 15px;
   }
 }
 
 .cards-container {
+  height: 100%;
   border-radius: 5px;
   background-color: v.$color-on-lake;
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
@@ -21,7 +24,7 @@
 }
 
 .card-img {
-  height: 200px;
+  height: 60%;
   position: relative;
   overflow: hidden;
 
