set color balls loader

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,9 @@ $color-searchbar: #ebebeb;
 $color-lake: #6da4aa;
 $color-on-lake: #F1F6F7;
 
+// loader ball color
+$color-loader-ball: #e99a28;
+
 $color-error: #b23542;
 $color-success: #84b59f;
 
