--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,16 @@
 @use '../../styles/variables' as v;
 
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+  main {
+    flex: 1 0 auto;
+  }
+}
+
 #wrapper {
   margin: 0 auto;
   max-width: 60rem;
